# killprocess

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp  pch.h
pkg/int/: CMakeLists.txt
pkg/int/impl/: CMakeLists.txt
pkg/int/impl/cmd/: CMakeLists.txt  parse.cpp  pch.h
pkg/int/impl/wnd/: CMakeLists.txt  pch.h  process.cpp
pkg/int/inc/cmd/: parse.h
pkg/int/inc/wnd/: process.h
